# impactAI-extraction-paper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/prompts/: RCT_ZSL.prompt  RCT_metadata-extraction_ZSL.prompt  metadata-extraction.prompt  pdf2markdown-table-OCR.prompt  pdf2markdown-table-postprocess.prompt  pdf2markdown-text-postprocess.prompt  pdf2markdown.prompt  prompt_engineering_pdf2markdown.prompt
src/evaluation/: evaluate_io.py
src/extract_metadata/: extract_metadata.py  settings.py  utils.py
src/extraction/get_io/: extract_from_tables.py
src/extraction/get_tables/: main_table.py  utils.py
src/parse/: check_and_start.sh  parse_pdf.py  process_and_shutdown.sh  settings.py  startup-script.sh  utils.py
src/rct_clf/: evaluate.py  model.py  settings.py  utils.py  zsl_classify.py  zsl_from_pdf.py
src/utils/: file_management.py  openai_response.py
