[tool.poetry]
name = "impactai-extraction-paper"
version = "0.1.0"
description = ""
authors = ["agombert <arnault.gombert@pm.me>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pymupdf4llm = "^0.0.17"
openai = "^1.53.1"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
aiofiles = "^24.1.0"
tqdm = "^4.66.6"
setfit = "^1.1.0"
datasets = "^3.1.0"
doclayout-yolo = "^0.0.2"
tiktoken = "^0.8.0"
pdf2image = "^1.17.0"
nltk = "^3.9.1"
google-generativeai = "^0.8.3"
python-poppler = "^0.4.1"
google-cloud-secret-manager = "^2.22.0"
google-cloud-storage = "^2.19.0"
transformers = "^4.47.0"
docling = "^2.12.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.2"
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
